syntax = "proto3";
package api;

option go_package = "kudzutechnologies/analytics/api";

/**
 * A bulk of analytics data to be sent to the erver
 */
message AnalyticsMetrics {
  string gatewayId = 1;
  bytes gatewayEui = 5;

  repeated AnalyticsUplink uplinks = 2;
  repeated AnalyticsDownlink downlinks = 3;
  repeated AnalyticsStat stats = 4;
}

/**
 * Uplink Analytics Message
 * (Sent from a mote)
 */
message AnalyticsUplink {
  int64 rxWallTime = 1;
  int64 rxGpsTime = 2;
  int64 rxFinishedTime = 3;
  float frequency = 4;
  uint32 channel = 5;
  uint32 rfChain = 6;
  CRCStatus crc = 7;
  Modulation modulation = 8;
  LoRaCodingRate codingRate = 9;
  oneof dataRate {
    LoRaDataRate dataRateLoRa = 10;
    uint32 dataRateFSK = 11;
  }
  float rssi = 12;
  float lsnr = 13;
  uint32 size = 14;
  bytes fhdr = 15;
  bytes uniqueId = 16;
}

/**
 * Downlink Analytics Message
 * (Received from the server)
 */
message AnalyticsDownlink {
  int64 txTime = 1;
  int64 txGpsTime = 2;
  float fskFreqDev = 3;
  float frequency = 4;
  uint32 channel = 5; // Not included in UDP semtech
  uint32 rfChain = 6;
  float power = 7;
  Modulation modulation = 8;
  LoRaCodingRate codingRate = 9;
  oneof dataRate {
    LoRaDataRate dataRateLoRa = 10;
    uint32 dataRateFSK = 11;
  }
  bool invertPolarity = 12;
  bool immediately = 13;
  uint32 rfPreamble = 14;
  uint32 size = 15;
  bytes fhdr = 16;
  bool noCrc = 17;
  int64 rxWallTime = 18;
  bytes uniqueId = 19;
}

/**
 * Analytics Status Message
 * (Sent from the gateway)
 */
message AnalyticsStat {
  int64 gwTime = 1;
  float gwLatitude = 2;
  float gwLongitude = 3;
  float gwAltitude = 4;
  uint32 rxPackets = 5;
  uint32 rxWithValidPhyCRC = 6;
  uint32 rxForwarded = 7;
  float rxAckr = 8;
  uint32 txReceived = 9;
  uint32 txEmitted = 10;

  // When set to `true` the values are gauges, meaning that
  // they replace any previous value. Otherwise they are
  // counters, which means they are added on top of the previous
  // values.
  bool isGauge = 11;
  // Gateway temperature
  optional float gwTemp = 12;
}

enum CRCStatus {
  MISSING = 0;
  OK = 1;
  FAIL = 2;
}

enum Modulation {
  UNKNOWN = 0;
  LORA = 1;
  FSK = 2;
}

enum LoRaCodingRate {
  CR_OFF = 0;
  CR_UNKNOWN = 1;
  CR_4_5 = 2;
  CR_4_6 = 3;
  CR_4_7 = 4;
  CR_4_8 = 5;
  CR_4_9 = 6;
  CR_4_10 = 7;
  CR_4_11 = 8;
  CR_4_12 = 9;
  CR_4_13 = 10;
  CR_4_14 = 11;
  CR_4_15 = 12;
  CR_4_16 = 13;
}

enum LoRaSF {
  SF_UNKNOWN = 0;
  SF12 = 1;
  SF11 = 2;
  SF10 = 3;
  SF9 = 4;
  SF8 = 5;
  SF7 = 6;
}

enum LoRaBW {
  BW_UNKNOWN = 0;
  BW_125k = 1;
  BW_500k = 2;
}

message LoRaDataRate {
  LoRaSF spreadingFactor = 1;
  LoRaBW bandwidth = 2;
}
