syntax = "proto3";
package api;

import "analytics.proto";

option go_package = "kudzutechnologies/analytics/api";

service AnalyticsServer {
  // Logs in to the remote service
  rpc Hello(APIRequestHello) returns (APIResponseHello);
  rpc Login(APIRequestLogin) returns (APIResponse);
  // Pushes analytics data to the server
  rpc PushMetrics(AnalyticsMetrics) returns (APIResponse);
}

message APIRequestLogin { bytes hash = 1; }

message APIRequestHello {
  int32 version = 1;
  bytes clientId = 2;
}

message APIResponseHello {
  int32 revision = 1;
  bytes challenge = 2;
}

message APIResponse {
  APIResponseStatus status = 1;
  optional string statusMessage = 2;
}

enum APIResponseStatus {
  STATUS_UNKNOWN = 0;
  STATUS_OK = 200;
  STATUS_FORBIDDEN = 403;
}
